# distributed-job-scheduler

./: Dockerfile.backend  README.md  docker-compose.yml
job-scheduler-frontend/: Dockerfile  package-lock.json  package.json
job-scheduler-frontend/app/: layout.tsx  page.tsx
job-scheduler-frontend/app/components/: JobTable.tsx  WebSocketProvider.tsx
job_scheduler_backend/: Cargo.toml  Dockerfile
job_scheduler_backend/migrations/: 20251122063047_create_jobs_table.sql
job_scheduler_backend/src/: main.rs  models.rs
job_scheduler_backend/src/api/: mod.rs
job_scheduler_backend/src/db/: mod.rs
job_scheduler_backend/src/job_worker/: mod.rs
job_scheduler_backend/src/ws/: mod.rs
