[package]
name = "job_sheduler_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
postgres = "0.19"
deadpool-redis = { version = "0.14", features = ["rt_tokio_1"] }
# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.6", features = ["v4","serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Task Management/Messaging
async-trait = "0.1"
futures = "0.3.31"
rand = "0.9.2"
redis = "0.32.7"
tower-http = { version = "0.6.6", features = ["cors"] } 

